Add requisite --add-opens for use with modular JDKs.