@@ -47,6 +47,7 @@
     <properties>
         <jdk.min.version>11</jdk.min.version>
         <jdk.release.version>11</jdk.release.version>
+        <jdk.runtime.args>--add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED</jdk.runtime.args>
         <version.jakarta.annotation>1.3.5</version.jakarta.annotation>
         <version.net.jcip.annotations>1.0</version.net.jcip.annotations>
         <version.org.apache.httpcomponents>5.1.3</version.org.apache.httpcomponents>
